--- a/stm32F103C8T6/stm32f103c8t6_demo/stm32f103c8t6_demo/MDK-ARM/stm32f103c8t6_demo/stm32f103c8t6_demo.build_log.htm
+++ b/stm32F103C8T6/stm32f103c8t6_demo/stm32f103c8t6_demo/MDK-ARM/stm32f103c8t6_demo/stm32f103c8t6_demo.build_log.htm
@@ -16,22 +16,25 @@ Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
 Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.26.2.0
-Dialog DLL:      DCM.DLL V1.17.2.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.5.0
+Dialog DLL:      DARMSTM.DLL V1.68.0.0
+Target DLL:      Segger\JL2CM3.dll V2.99.31.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 D:\Documents\GitHub\STM32_Learn\stm32F103C8T6\stm32f103c8t6_demo\stm32f103c8t6_demo\MDK-ARM\stm32f103c8t6_demo.uvprojx
-Project File Date:  03/07/2021
+Project File Date:  03/13/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Program Files (x86)\Keil_v5\ARM\ARMCC\Bin'
 Build target 'stm32f103c8t6_demo'
 compiling main.c...
+../Src/main.c(119): warning:  #223-D: function "memset" declared implicitly
+  			memset(uart1_tx_buff, i+47, UART1_BUFF_SIZE);
+../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=7372 RO-data=292 RW-data=20 ZI-data=1556  
+Program Size: Code=9112 RO-data=292 RW-data=28 ZI-data=7700  
 FromELF: creating hex file...
-"stm32f103c8t6_demo\stm32f103c8t6_demo.axf" - 0 Error(s), 0 Warning(s).
+"stm32f103c8t6_demo\stm32f103c8t6_demo.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
